k8s/06-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carrental-web
  namespace: carrental
  labels:
    app: carrental-web
spec:
  replicas: 2             # 2 replicas for high availability
  selector:
    matchLabels:
      app: carrental-web
  template:
    metadata:
      labels:
        app: carrental-web
    spec:
      containers:
        - name: carrental-web
          image: chetan0808/carrental-web:latest   # prebuilt image on Docker Hub
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /index.php
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /index.php
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
