k8s/07-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carrental-web
  namespace: carrental
  labels:
    app: carrental-web
spec:
  selector:
    app: carrental-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080     # Access via http://<node-ip>:30080
  type: NodePort
  # NodePort: works on any cluster (Minikube, kind, bare metal, cloud)
  # To use LoadBalancer instead (cloud clusters only), change type to LoadBalancer
  # and remove the nodePort line.
